--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<!-- templates/send_cookie.html -->
+<!-- templates/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Send Cookie</title>
+    <title>Index Page</title>
 </head>
 <body>
 
-    <h1>Send Cookie to Server</h1>
+    <h1>Welcome to the Index Page</h1>
+    
+    <p>This is a sample index page.</p>
 
     <!-- JavaScript 코드 -->
     <script>
